- remove unused components - cleanup - reconfigure

--- a/package.json
+++ b/package.json
@@ -1,26 +1,32 @@
 {
-  "name": "react-npm-package-boilerplate",
+  "name": "@saeon/saeon-ux",
   "version": "1.0.0",
-  "description": "Boilerplate to quickstart React component development",
+  "description": "SAEON's frontend react components npm package",
   "main": "./dist/index.js",
+  "author": "SAEON",
   "scripts": {
     "build": "webpack --config webpack.config.babel.js",
-    "build-examples": "webpack --config examples/webpack.config.babel.js --progress",
     "clean": "rm -rf dist coverage",
     "coverage": "jest --coverage",
     "lint": "eslint ./src",
-    "prepublish": "npm run clean && npm run test && npm run build",
-    "start": "webpack-dev-server --config examples/webpack.config.live.babel.js",
-    "test": "npm run lint && npm run coverage"
+    "test": "npm run lint && npm run coverage",
+    "start": "start-storybook -p 6006",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "@storybook/addon-actions": "^5.0.6",
+    "@storybook/addon-links": "^5.0.6",
+    "@storybook/addons": "^5.0.6",
+    "@storybook/react": "^5.0.6",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-import": "^1.11.0",
     "chai": "^4.1.2",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^1.0.1",
@@ -31,17 +37,24 @@
     "jest-cli": "^23.6.0",
     "node-sass": "^4.7.2",
     "prop-types": "^15.6.0",
-    "react-addons-test-utils": "^15.5.1",
     "react": "^16.6.0",
+    "react-addons-test-utils": "^15.5.1",
     "react-dom": "^16.6.0",
     "react-hot-loader": "next",
     "react-test-renderer": "^16.0.0",
     "regenerator-runtime": "^0.12.1",
     "sass-loader": "^7.0.1",
+    "scss-loader": "^0.0.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.9.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.4"
+  },
+  "dependencies": {
+    "antd": "^3.16.2",
+    "bootstrap": "^4.3.1",
+    "mdbreact": "git+https://oauth2:TrvzhasQo5h8aod8YSLE@git.mdbootstrap.com/mdb/react/re-pro.git",
+    "reactstrap": "^8.0.0"
   },
   "peerDependencies": {
     "react": ">= 16.3.0",
