--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,6 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react"]
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "plugins": [
+    ["import", { "libraryName": "antd", "libraryDirectory": "lib", "style": "css" }] // `style: true` for less
+  ]
 }
