--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@saeon/saeon-ux",
   "version": "1.0.2",
-  "description": "SAEON's frontend react components npm package",
+  "description": "SAEON's frontend react components library",
   "main": "./dist/index.js",
   "author": "SAEON",
   "scripts": {
@@ -19,10 +19,12 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
-    "@storybook/addon-actions": "^5.0.6",
-    "@storybook/addon-links": "^5.0.6",
-    "@storybook/addons": "^5.0.6",
-    "@storybook/react": "^5.0.6",
+    "@sambego/storybook-state": "^1.3.4",
+    "@storybook/addon-actions": "^5.0.9",
+    "@storybook/addon-links": "^5.0.9",
+    "@storybook/addon-options": "^5.0.10",
+    "@storybook/addons": "^5.0.9",
+    "@storybook/react": "^5.0.9",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
@@ -54,6 +56,7 @@
     "antd": "^3.16.2",
     "bootstrap": "^4.3.1",
     "mdbreact": "git+https://oauth2:TrvzhasQo5h8aod8YSLE@git.mdbootstrap.com/mdb/react/re-pro.git",
+    "open-iconic": "^1.1.1",
     "reactstrap": "^8.0.0"
   },
   "peerDependencies": {
