--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@saeon/saeon-ux",
-  "version": "1.0.2",
+  "version": "1.1.1",
   "description": "SAEON's frontend react components library",
-  "main": "./dist/index.js",
+  "main": "./dist/main.js",
   "author": "SAEON",
   "scripts": {
     "build": "webpack --config webpack.config.babel.js",
@@ -36,7 +36,9 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^5.8.0",
     "eslint-plugin-react": "^7.4.0",
+    "file-loader": "^3.0.1",
     "jest-cli": "^23.6.0",
+    "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.7.2",
     "prop-types": "^15.6.0",
     "react": "^16.6.0",
@@ -53,10 +55,12 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "antd": "^3.16.2",
     "bootstrap": "^4.3.1",
     "mdbreact": "git+https://oauth2:TrvzhasQo5h8aod8YSLE@git.mdbootstrap.com/mdb/react/re-pro.git",
-    "open-iconic": "^1.1.1",
     "reactstrap": "^8.0.0"
   },
   "peerDependencies": {
