--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,8 @@
   "presets": ["@babel/preset-env", "@babel/preset-react"],
   "plugins": [
     ["import", { "libraryName": "antd", "libraryDirectory": "lib", "style": "css" }] // `style: true` for less
+  ],
+  "ignore": [
+      "node_modules"
   ]
 }
