--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saeon/saeon-ux",
-  "version": "1.1.13",
+  "version": "1.1.14",
   "description": "SAEON's frontend react components library",
   "main": "./dist/index.js",
   "author": "SAEON",
@@ -60,6 +60,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "antd": "^3.16.2",
     "bootstrap": "^4.3.1",
+    "lodash": "^4.17.11",
     "mdbreact": "git+https://oauth2:TrvzhasQo5h8aod8YSLE@git.mdbootstrap.com/mdb/react/re-pro.git",
     "reactstrap": "^8.0.0"
   },
