--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "bootstrap": "^4.3.1",
     "lodash": "^4.17.11",
     "mdbreact": "git+https://oauth2:TrvzhasQo5h8aod8YSLE@git.mdbootstrap.com/mdb/react/re-pro.git",
+    "react-autosuggest": "^9.4.3",
     "reactstrap": "^8.0.0"
   },
   "peerDependencies": {
